--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body {
 
 .card-section {
   display: grid;
-  grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
 }
 
@@ -220,9 +220,25 @@ display: flex;
   padding-bottom: 5px;
 }
 
-
 @media(max-width: 768px) {
   .main-container {
     grid-template-columns: 1fr;
   }
+} 
+
+
+@media (max-width: 992px) {
+  .card-section {
+    grid-template-columns: repeat(2, 1fr); 
+  }
 }
+
+@media (max-width: 600px) {
+  .card-section {
+    grid-template-columns: 1fr; 
+  }
+}
+
+
+
+
